--- a/templates/formulario_denuncia.html
+++ b/templates/formulario_denuncia.html
@@ -27,6 +27,7 @@
     {% endif %}
 
     <form action="{% url 'denuncia_create' %}" method="POST" enctype="multipart/form-data" class="denuncia-form">
+
         {% csrf_token %}
 
         <section>
@@ -41,21 +42,23 @@
                 {% endif %}
             </div>
 
-            <style>
-                .required::before {
-                    content: "*";
-                    color: red;
-                    margin-right: 4px;
-                }
-            </style>
-
-            <div class="form-group">
+              <div class="form-group">
                 {{ form.nome.label_tag }}
                 {{ form.nome }}
                 {% if form.nome.errors %}
                 <div class="field-error">{{ form.nome.errors }}</div>
                 {% endif %}
             </div>
+
+            <div class="form-group">
+                {{ form.descricao_animal.label_tag }}
+                {{ form.descricao_animal }}
+                {% if form.nome.errors %}
+                <div class="field-error">{{ form.nome.errors }}</div>
+                {% endif %}
+            </div>
+
+
         </section>
 
         <section>
