--- a/templates/formulario_denuncia.html
+++ b/templates/formulario_denuncia.html
@@ -157,7 +157,7 @@
 
     {% for tratativa in tratativas %}
         <div>
-            <strong>{{ tratativa.atendente }}</strong> - {{ tratativa.data_tratativa|date:"d/m/Y H:i" }}<br>
+            <strong>{{ tratativa. }}</strong> - {{ tratativa.data_tratativa|date:"d/m/Y H:i" }}<br>
             {{ tratativa.descricao }}
         </div>
     {% empty %}
